# mrar

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
benches/: pipeline.rs
src/: cli.rs  error.rs  interactive.rs  lib.rs  main.rs  manifest.rs  scan.rs
src/interactive/: compression.rs  dry_run.rs  folders.rs  mod.rs
src/pipeline/: compress.rs  metadata.rs  mod.rs  process.rs  rename.rs
tests/: config_flow.rs  integration.rs  interactive_smoke.rs  pipeline.rs
