[package]
name = "mrar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
console = "0.16.3"
dialoguer = { version = "0.12.0", features = ["history"] }
fast_image_resize = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
indicatif = "0.18.4"
metastrip = "0.1.0"
rayon = "1.11.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
walkdir = "2.5.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
loom = "0.7.2"

[[bench]]
name = "pipeline"
harness = false
